--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -32,6 +32,6 @@
 
   &:hover {
     color: $color-violet--darken;
-    border-bottom: 1px solid $color-violet--darken;
+    // border-bottom: 1px solid $color-violet--darken;
   }
 }
